--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sales Dashboard | Power BI Tutorial</title>
+</head>
+<body>
+    <h1>Sales Dashboard | Power BI Tutorial</h1>
+    <video width="600" controls>
+        <source src="https://github.com/GayatriBhinge/POWER-BI-SalesOrderData/blob/main/SalesOrder_Dashboard_GayatriBhinge.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</body>
+</html>
 
